--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Personal developer portfolio of David Poslušný." />
+    <meta name="author" content="David Poslušný" />
+    <meta name="keywords" content="portfolio, personal website, david poslušný, react, tailwind" />
     <title>David Poslušný</title>
   </head>
   <body>
