--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Personal developer portfolio of David Poslušný." />
     <meta name="author" content="David Poslušný" />
     <meta name="keywords" content="portfolio, personal website, david poslušný, react, tailwind" />
+    <meta property="og:title" content="David Poslušný." />
+    <meta property="og:description" content="Personal developer portfolio of David Poslušný." />
+    <meta property="og:image" content="/photo-small.png" />
+    <meta property="og:url" content="https://davidposlusny.onrender.com/" />
     <title>David Poslušný</title>
   </head>
   <body>
